More alignment fixes.

--- a/frontend/src/App/styles/components/_skillsBarGraph.scss
+++ b/frontend/src/App/styles/components/_skillsBarGraph.scss
@@ -1,8 +1,20 @@
 .bar-graph-horizontal {
   display: grid;
-  grid-template-columns: 10rem 30rem;
+  grid-template-columns: 10rem 50rem;
   grid-template-rows: repeat(8, 1fr);
   grid-gap: 2.25rem 1rem;
+
+  @media (max-width: 1350px) {
+    grid-template-columns: 10rem 40rem;
+  }
+
+  @media (max-width: 1200px) {
+    grid-template-columns: 10rem 30rem;
+  }
+
+  @media (max-width: 950px) {
+    grid-template-columns: 10vw 60vw;
+  }
 }
 
 .skills-graph {
@@ -22,7 +34,8 @@
     // justify-content: flex-start;
     // width: 100%;
     // margin-left: 20vw;
-    transform: translateX(-20rem);
+    transform: translateY(-0.5rem);
+    align-self: flex-start;
 
     @media (max-width: 950px) {
       transform: translate(0, 0);
